--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "cookie-parser": "^1.4.7",
     "cookie-session": "^2.1.1",
     "encoding-japanese": "^2.2.0",
-    "express": "^5.1.0",
-    "googleapis": "^166.0.0",
+    "express": "4.17.1",
+    "googleapis": "48.0.0",
     "iconv-lite": "^0.7.0",
-    "qs": "^6.14.0"
+    "qs": "^6.14.0",
+    "node-html-parser": "5.3.3",
+    "node-fetch": "2.6.7"
   }
 }
